# monarch-studentaid-sync

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  env.example  portal.env.example  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
scripts/: docker_sync.ps1  docker_sync.sh  parse_portal_text_snapshot.py
src/cri_monarch_sync/: cli.py  config.py
src/cri_monarch_sync/cri/: __init__.py  client.py  mfa.py  selectors.py
src/cri_monarch_sync/monarch/: client.py
src/cri_monarch_sync/util/: __init__.py  dates.py  money.py
src/studentaid_monarch_sync/: __init__.py  cli.py  config.py  logging_config.py  models.py  servicers.py  state.py
src/studentaid_monarch_sync/monarch/: __init__.py  client.py  loan_accounts.py
src/studentaid_monarch_sync/portal/: __init__.py  client.py  mfa.py  selectors.py
src/studentaid_monarch_sync/util/: debug_bundle.py
tests/: conftest.py  test_cli_bootstrap_monarch_auth.py  test_config.py  test_debug_bundle.py  test_duplicate_guard.py  test_edf_device_verification.py  test_loan_account_mapping.py  test_loan_groups_env.py  test_mfa_parsing.py  test_monarch_client_cache.py  test_parsing.py  test_payment_allocations_servicers.py  test_portal_smoke.py  test_state.py
