[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studentaid-monarch-sync"
version = "0.1.0"
description = "Sync StudentAid servicer loan balances + posted payments into Monarch Money"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]


